# think-what-you-mean

./: README.md  pyproject.toml
src/say_what_you_mean/: GSM8K_JSON.ipynb  GSM8K_JSON_cot_vs_no_cot.ipynb  Shuffle_Objects.ipynb  Shuffle_Objects_broken.ipynb  Shuffle_Objects_retry_guided_ttc_scaling.ipynb  Shuffle_Objects_simple_ttc_scaling.ipynb  __init__.py  hello.py
src/say_what_you_mean/original/: Last_Letter_NL_best.ipynb
